添加打印按钮

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -12,4 +12,4 @@ maxActive=10
 maxWait=60000
 
 #JDBC驱动建立连接时附带的连接属性属性的格式必须为这样：[属性名=property;]
-connectionProperties=useUnicode=true;characterEncoding=utf8;serverTimezone=UTC;useSSL=true
+connectionProperties=useUnicode=true;characterEncoding=utf8;serverTimezone=Hongkong;useSSL=true;
