--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ apply plugin: 'idea'
 sourceCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
